--- a/src/utilities/scrollbar.css
+++ b/src/utilities/scrollbar.css
@@ -16,6 +16,6 @@
   }
 
   .ds-custom-scrollbar::-webkit-scrollbar-thumb:hover {
-    background: var(--ds-border-focus);
+    background: var(--ds-primary);
   }
 }
